--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             riches que l'on cultive avec amour.</p>
     </div>
     <div class="videoDiv">
-        <video id="section2" controls playsinligne height="50vw" width="50vw" poster="picture/poster.png"
+        <video fetchpriority="low" id="section2" controls playsinligne height="50vw" width="50vw" poster="picture/poster.png"
         src="picture/videoChezEstela.mp4"></video>
     </div>
     <div class="second-div">
