--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" fetchpriority="high" href="style.min.css">
+    <link rel="preload" fetchpriority="high" as="image" href="picture/Concours_Pastèque-2.jpg" type="image/webp">
     <link rel="stylesheet" href="dist/output.css">
     <link rel="stylesheet" fetchpriority="low" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <title>Chez Estela</title>
