--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
             <a href="https://www.facebook.com/ChezEstela">Nous suivre sur Facebook</a>
             <a href="https://www.instagram.com/chezestela/?hl=fr">Nous suivre sur Instagram</a>
         </div>
-    </footer>
+    </footer> 
+    <script src="script.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="swiper-script.js"></script>
-    <script src="script.js"></script>
     <script>var swiper = new Swiper(".mySwiper3", {
         pagination: '.swiper-pagination',
         effect: 'coverflow',
