--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" fetchpriority="high" href="style.min.css">
     <link rel="preload" fetchpriority="high" as="image" href="picture/Concours_Pastèque-2.jpg" type="image/webp">
     <link rel="stylesheet" href="dist/output.css">
-    <link rel="stylesheet" fetchpriority="low" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <title>Chez Estela</title>
 </head>
 <body>
